--- a/SoftwareUpdate/GUPdotNET/src/GUPdotNET.csproj
+++ b/SoftwareUpdate/GUPdotNET/src/GUPdotNET.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{4C89213F-F2F0-417D-AB7F-850D2BC47DC7}</ProjectGuid>
@@ -73,10 +73,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateCheck.cs" />
-    <Compile Include="frmError.cs" />
     <Compile Include="frmReTry.cs" />
-    <None Include="obj\Debug\GUPdotNET.csproj.FileListAbsolute.txt" />
-    <Compile Include="gtk-gui\GUPdotNET.frmError.cs" />
     <Compile Include="gtk-gui\GUPdotNET.frmReTry.cs" />
   </ItemGroup>
   <ItemGroup>
