--- a/SoftwareUpdate/GUPdotNET/src_testapp/GUPdotNET_Testing/app.config
+++ b/SoftwareUpdate/GUPdotNET/src_testapp/GUPdotNET_Testing/app.config
@@ -1,42 +1,24 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<!-- access these values via the property:
-			System.Configuration.ConfigurationManager.AppSettings[key]
-		-->
+		<!-- the name of the program as recognized by it's process -->
+		<add key="ProgramName" value="YahtzeeSharp"/>
 		<!-- The Generic Name/Title of the calling program -->
-		<add key="ProgramName" value="GUPdotNET Test" />
-		<!-- The full path to the program that is being updated -->
-		<add key="ProgramFullPath" value="C://MyProgram.exe" />
+		<add key="ProgramTitle" value="Yahtzee Sharp" />
 		<!-- The type of install that is needed for this installation -->
 		<add key="InstallType" value="Win32" />
 		<!--
-		<add key="InstallType" value="Linux_rpm" />
 		<add key="InstallType" value="Linux_bin" />
 		<add key="InstallType" value="Linux_src" />
+		<add key="InstallType" value="Linux_rpm" />
 		-->
-		<!-- Optional.
-	The window class name of program that you want to update.
-	GUP uses FindWindow routine to get the Handle of window, then send WM_CLOSE to the handle in order to quit the program.
-	If there are several running instances, GUP will kill one by one until the last instance.
-	
-	In win32 system, if a program is running, the binary file is locked. 
-	Use this parameter to close the program to make sure the old binary files can be erased by new ones.
-	-->
-    <add key="AppToClose" value="MonoToDo"/>
-		
 		<!-- The URL of the web site that contains the update information -->
-		<add key="UpdateInfoURL" value="http://brdstudio.net/gupdotnet/GetUpdateInfo.aspx" />
-		<!-- The current major version of the calling that we want to update -->
+		<add key="UpdateInfoURL" value="http://brdstudio.net/yahtzeesharp/GetUpdateInfo.aspx" />
+		<!-- The current major version of the calling that we want to update
 		<add key="CurrentMajorVersion" value="1" />
-		<!-- The current minor version of the calling that we want to update -->
+		 -->
+		<!-- The current minor version of the calling that we want to update
 		<add key="CurrentMinorVersion" value="0" />
-		<!-- 
-			When SilentCheck is true GUPdotNET will not notify the user when 
- 		 	when a connection to the web site is not available or there is an error
-		-->
-		<add key="SilentCheck" value="true" />
-		<!-- The name of the program -->
-		<add key="CallingApplication" value="GUPdotNET_Test" />
+		 -->
  	</appSettings>
 </configuration>
