--- a/SoftwareUpdate/GUPdotNET/src/GUPdotNET.csproj
+++ b/SoftwareUpdate/GUPdotNET/src/GUPdotNET.csproj
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{4C89213F-F2F0-417D-AB7F-850D2BC47DC7}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <SourceAnalysisOverrideSettingsFile>C:\Documents and Settings\ayork\Application Data\ICSharpCode/SharpDevelop3.0\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
     <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
@@ -12,8 +12,6 @@
     <WarningLevel>4</WarningLevel>
     <AssemblyName>GUPdotNET</AssemblyName>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <StartupObject>GUPdotNET.MainClass</StartupObject>
-    <StartArguments>true</StartArguments>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <Description>A general purpose update program for Mono/Gtk# to be used cross platform.</Description>
@@ -56,9 +54,7 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
-    <None Include="app.config">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </None>
+    <None Include="app.config" />
     <None Include="web_files\GetUpdateInfo.aspx" />
     <None Include="work_files\FlowChart.dia" />
     <Compile Include="frmInstallDialog.cs" />
@@ -70,11 +66,12 @@
     <Compile Include="gtk-gui\GUPdotNET.frmSuPass.cs" />
     <Compile Include="gtk-gui\GUPdotNET.frmUpdateConfirm.cs" />
     <Compile Include="gtk-gui\GUPdotNET.frmUpdateDownload.cs" />
-    <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateCheck.cs" />
     <Compile Include="frmReTry.cs" />
     <Compile Include="gtk-gui\GUPdotNET.frmReTry.cs" />
+    <Compile Include="frmUpdateCheck.cs" />
+    <Compile Include="gtk-gui\GUPdotNET.frmUpdateCheck.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Mono.Posix" />
