* Common: * frmError.cs: * Common/Const.cs: * Common/Common.cs: * GUPdotNET.csproj: * frmUpdateCheck.cs: * Common/Options.cs: * gtk-gui/gui.stetic: * frmUpdateConfirm.cs: * gtk-gui/generated.cs: * Common/EnviromentInfo.cs: * Properties/AssemblyInfo.cs: * gtk-gui/GUPdotNET.frmReTry.cs: * gtk-gui/GUPdotNET.frmSuPass.cs: * gtk-gui/GUPdotNET.frmUpdateCheck.cs: * gtk-gui/GUPdotNET.frmInstallDialog.cs: * gtk-gui/GUPdotNET.frmUpdateConfirm.cs: * gtk-gui/GUPdotNET.frmUpdateDownload.cs:

--- a/SoftwareUpdate/GUPdotNET/Assembly/src/GUPdotNET.csproj
+++ b/SoftwareUpdate/GUPdotNET/Assembly/src/GUPdotNET.csproj
@@ -72,6 +72,10 @@
     <Compile Include="gtk-gui\GUPdotNET.frmReTry.cs" />
     <Compile Include="frmUpdateCheck.cs" />
     <Compile Include="gtk-gui\GUPdotNET.frmUpdateCheck.cs" />
+    <Compile Include="Common\Const.cs" />
+    <Compile Include="Common\Options.cs" />
+    <Compile Include="Common\Common.cs" />
+    <Compile Include="Common\EnviromentInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Mono.Posix" />
@@ -90,5 +94,14 @@
     <EmbeddedResource Include="gtk-gui\gui.stetic">
       <LogicalName>gui.stetic</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="images\update_large.png">
+      <LogicalName>update_large.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\update_medium.png">
+      <LogicalName>update_medium.png</LogicalName>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Common\" />
   </ItemGroup>
 </Project>
