* GUPdotNET.csproj: * frmUpdateCheck.cs: * gtk-gui/gui.stetic: * frmUpdateConfirm.cs: * gtk-gui/GUPdotNET.frmUpdateCheck.cs: * gtk-gui/GUPdotNET.frmUpdateConfirm.cs:

--- a/SoftwareUpdate/GUPdotNET/Assembly/src/GUPdotNET.csproj
+++ b/SoftwareUpdate/GUPdotNET/Assembly/src/GUPdotNET.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Common\Options.cs" />
     <Compile Include="Common\Common.cs" />
     <Compile Include="Common\EnviromentInfo.cs" />
+    <Compile Include="Common\CommonEnum.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Mono.Posix" />
