--- a/SoftwareUpdate/GUPdotNET/Assembly/src/app.config
+++ b/SoftwareUpdate/GUPdotNET/Assembly/src/app.config
@@ -5,11 +5,11 @@
 			System.Configuration.ConfigurationManager.AppSettings[key]
 		-->
 		<!-- the name of the program as recognized by it's process -->
-		<add key="ProgramName" value="YahtzeeSharp"/>
+		<add key="ProgramName" value="GUPdotNET_TestingApp"/>
 		<!-- The Generic Name/Title of the calling program -->
-		<add key="ProgramTitle" value="YahtzeeSharp" />
+		<add key="ProgramTitle" value="GUPdotNET Testing Application" />
 		<!-- The type of install that is needed for this installation -->
-		<add key="InstallType" value="Linux_src" />
+		<add key="InstallType" value="Windows" />
 		<!--
 		<add key="InstallType" value="Linux_bin" />
 		<add key="InstallType" value="Win32" />
