--- a/SoftwareUpdate/GUPdotNET/Assembly/src_testapp/GUPdotNET_Testing/app.config
+++ b/SoftwareUpdate/GUPdotNET/Assembly/src_testapp/GUPdotNET_Testing/app.config
@@ -5,20 +5,19 @@
 		<add key="ProgramName" value="YahtzeeSharp"/>
 		<!-- The Generic Name/Title of the calling program -->
 		<add key="ProgramTitle" value="Yahtzee Sharp" />
-		<!-- The type of install that is needed for this installation -->
-		<add key="InstallType" value="Win32" />
-		<!--
-		<add key="InstallType" value="Linux_bin" />
-		<add key="InstallType" value="Linux_src" />
-		<add key="InstallType" value="Linux_rpm" />
+		
+		<!-- 
+			The Operating System We Are Updating 
+			Expected Values = Windows, Linux, Mac
 		-->
+		<add key="OS" value="Windows" />
+		<!-- 
+			The type of install that is needed for this installation 
+			Expected Values = Installer, RPM, DEB, BIN, TGZ, SRC
+		-->
+		<add key="InstallType" value="Installer" />
+		
 		<!-- The URL of the web site that contains the update information -->
-		<add key="UpdateInfoURL" value="http://brdstudio.net/yahtzeesharp/GetUpdateInfo.aspx" />
-		<!-- The current major version of the calling that we want to update
-		<add key="CurrentMajorVersion" value="1" />
-		 -->
-		<!-- The current minor version of the calling that we want to update
-		<add key="CurrentMinorVersion" value="0" />
-		 -->
+		<add key="UpdateInfoURL" value="http://brdstudio.net/gupdotnet/GetUpdateInfo.asp" />
  	</appSettings>
 </configuration>
