--- a/SoftwareUpdate/GUPdotNET/Assembly/src/app.config
+++ b/SoftwareUpdate/GUPdotNET/Assembly/src/app.config
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<!-- access these values via the property:
-			System.Configuration.ConfigurationManager.AppSettings[key]
-		-->
 		<!-- the name of the program as recognized by it's process -->
-		<add key="ProgramName" value="GUPdotNET_TestingApp"/>
+		<add key="ProgramName" value="YahtzeeSharp"/>
 		<!-- The Generic Name/Title of the calling program -->
-		<add key="ProgramTitle" value="GUPdotNET Testing Application" />
-		<!-- The type of install that is needed for this installation -->
-		<add key="InstallType" value="Windows" />
-		<!--
-		<add key="InstallType" value="Linux_bin" />
-		<add key="InstallType" value="Win32" />
-		<add key="InstallType" value="Linux_rpm" />
+		<add key="ProgramTitle" value="Yahtzee Sharp" />
+		
+		<!-- 
+			The Operating System We Are Updating 
+			Expected Values = Windows, Linux, Mac
 		-->
+		<add key="OS" value="Windows" />
+		<!-- 
+			The type of install that is needed for this installation 
+			Expected Values = Installer, RPM, DEB, BIN, TGZ, SRC
+		-->
+		<add key="InstallType" value="Installer" />
+		
 		<!-- The URL of the web site that contains the update information -->
-		<add key="UpdateInfoURL" value="http://brdstudio.net/yahtzeesharp/GetUpdateInfo.aspx" />
-		<!-- The current major version of the calling that we want to update
-		<add key="CurrentMajorVersion" value="1" />
-		 -->
-		<!-- The current minor version of the calling that we want to update
-		<add key="CurrentMinorVersion" value="0" />
-		 -->
+		<add key="UpdateInfoURL" value="http://brdstudio.net/gupdotnet/GetUpdateInfo.asp" />
  	</appSettings>
 </configuration>
