--- a/SoftwareUpdate/GUPdotNET/Assembly/src_testapp/GUPdotNET_Testing/app.config
+++ b/SoftwareUpdate/GUPdotNET/Assembly/src_testapp/GUPdotNET_Testing/app.config
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
+		
+		<!-- BEGIN GUPdotNET AREA -->
 		<!-- the name of the program as recognized by it's process -->
 		<add key="ProgramName" value="YahtzeeSharp"/>
 		<!-- The Generic Name/Title of the calling program -->
@@ -19,5 +21,10 @@
 		
 		<!-- The URL of the web site that contains the update information -->
 		<add key="UpdateInfoURL" value="http://brdstudio.net/gupdotnet/GetUpdateInfo.asp" />
+		
+		<!-- Logging Enable -->
+		<add key="SaveUpdateLog" value="true" />
+		<add key="SaveErrorLog" value="true" />		
+		<!-- END GUPdotNET AREA -->		
  	</appSettings>
 </configuration>
