--- a/SoftwareUpdate/GUPdotNET/Assembly/src/GUPdotNET.csproj
+++ b/SoftwareUpdate/GUPdotNET/Assembly/src/GUPdotNET.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{4C89213F-F2F0-417D-AB7F-850D2BC47DC7}</ProjectGuid>
@@ -76,7 +76,6 @@
     <Compile Include="Common\Options.cs" />
     <Compile Include="Common\Common.cs" />
     <Compile Include="Common\EnviromentInfo.cs" />
-    <Compile Include="Common\CommonEnum.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Mono.Posix" />
