--- a/SoftwareUpdate/GUPdotNET/StandAlone/src_testapp/testapp/GUPdotNET_Testing.csproj
+++ b/SoftwareUpdate/GUPdotNET/StandAlone/src_testapp/testapp/GUPdotNET_Testing.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{954A4986-D34B-408D-9F9E-A179B219BD9E}</ProjectGuid>
@@ -70,10 +70,6 @@
     <Reference Include="glib-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="pango-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
-    <ProjectReference Include="..\..\src\GUPdotNET.csproj">
-      <Project>{4C89213F-F2F0-417D-AB7F-850D2BC47DC7}</Project>
-      <Name>GUPdotNET</Name>
-    </ProjectReference>
     <Reference Include="System.Configuration" />
   </ItemGroup>
   <Import Project="$(MonoBuildTasksPath)\Mono.Build.CSharp.targets" />
