--- a/SoftwareUpdate/GUPdotNET/StandAlone/src/GUPdotNET.csproj
+++ b/SoftwareUpdate/GUPdotNET/StandAlone/src/GUPdotNET.csproj
@@ -24,6 +24,8 @@
     <DefineConstants>DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Commandlineparameters>silent</Commandlineparameters>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
