* Main.cs: * app.config: * frmConfirm.cs: * MainWindow.cs: * GUPdotNET.csproj: * gtk-gui/gui.stetic: * gtk-gui/generated.cs: * gtk-gui/GUPdotNET.frmConfirm.cs: * gtk-gui/GUPdotNET.frmInstall.cs: * gtk-gui/GUPdotNET.MainWindow.cs: * gtk-gui/GUPdotNET.frmDownload.cs:

--- a/SoftwareUpdate/GUPdotNET/StandAlone/src/app.config
+++ b/SoftwareUpdate/GUPdotNET/StandAlone/src/app.config
@@ -2,6 +2,9 @@
 <configuration>
 	<appSettings>
 		
+		<!-- For Debugging -->
+		<add key="Debug" value="true"/>
+		
 		<!-- BEGIN GUPdotNET AREA -->
 		<!-- the name of the program as recognized by it's process -->
 		<add key="ProgramName" value="YahtzeeSharp"/>
