--- a/UtilityTools/CMYControls/CMYControlsTest/CMYControlsTest.csproj
+++ b/UtilityTools/CMYControls/CMYControlsTest/CMYControlsTest.csproj
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="3.5" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -48,4 +48,10 @@
     <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\CMYControls\CMYControls.csproj">
+      <Project>{8104C857-F52A-4154-BE6D-DD67E1759FE1}</Project>
+      <Name>CMYControls</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
