* MonoBPMonitor/Users/User.cs: * MonoBPMonitor/frmOptions.cs: * MonoBPMonitor/Entry/Entry.cs: * MonoBPMonitor/Common/Common.cs: * MonoBPMonitor/Common/Options.cs: * MonoBPMonitor/Doctors/Doctor.cs: * MonoBPMonitor/Common/Globals.cs: * MonoBPMonitor/gtk-gui/gui.stetic: * MonoBPMonitor/Entry/frmBPEntry.cs: * MonoBPMonitor/Help/frmErrorLog.cs: * MonoBPMonitor/MonoBPMonitor.csproj: * MonoBPMonitor/Users/UserComboBox.cs: * MonoBPMonitor/Users/UserTreeView.cs: * MonoBPMonitor/Common/EnviromentData.cs: * MonoBPMonitor/Medications/Medication.cs: * MonoBPMonitor/Doctors/DoctorTreeView.cs: * MonoBPMonitor/Doctors/DoctorComboBox.cs: * MonoBPMonitor/Users/UserRendererCombo.cs: * MonoBPMonitor/Doctors/DoctorRendererCombo.cs: * MonoBPMonitor/Medications/MedicationTreeView.cs: * MonoBPMonitor/Reports/MainEntry/EntryTreeView.cs: * MonoBPMonitor/gtk-gui/MonoBPMonitor.frmOptions.cs: * MonoBPMonitor/gtk-gui/MonoBPMonitor.frmBPEntry.cs: * MonoBPMonitor/gtk-gui/MonoBPMonitor.frmCalendar.cs:

--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/MonoBPMonitor.csproj
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/MonoBPMonitor.csproj
@@ -132,7 +132,7 @@
     <Compile Include="Common\BufferTags.cs" />
     <Compile Include="Common\Common.cs" />
     <Compile Include="Common\Const.cs" />
-    <Compile Include="Common\Globals.cs" />
+    <Compile Include="Common\EnviromentData.cs" />
     <Compile Include="Common\Options.cs" />
     <Compile Include="Common\SQLiteDataProvider.cs" />
     <Compile Include="SetUp\frmSetUp.cs" />
