--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/MonoBPMonitor.csproj
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/MonoBPMonitor.csproj
@@ -61,6 +61,10 @@
     <Reference Include="System.Data">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
+    <Reference Include="System.Data.SQLite, Version=1.0.61.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\WINDOWS\assembly\GAC_32\System.Data.SQLite\1.0.61.0__db937bc2d44ff139\System.Data.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml">
       <SpecificVersion>False</SpecificVersion>
@@ -115,11 +119,22 @@
     <EmbeddedResource Include="images\date.png">
       <LogicalName>date.png</LogicalName>
     </EmbeddedResource>
+    <Compile Include="data\BackupRestore.cs" />
+    <Compile Include="data\dsBPMonitor.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dsBPMonitor.xsd</DependentUpon>
+    </Compile>
     <Compile Include="data\UsageStorage.cs" />
     <Compile Include="Doctors\DoctorTreeView.cs" />
     <Compile Include="Doctors\DoctorTreeView.Designer.cs" />
     <Compile Include="Medications\MedicationTreeView.cs" />
     <Compile Include="Medications\MedicationTreeView.Designer.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Users\UserRendererCombo.cs" />
     <Compile Include="Users\UserTreeView.cs" />
     <Compile Include="Users\UserTreeView.Designer.cs" />
@@ -160,7 +175,23 @@
     <EmbeddedResource Include="images\rx.png">
       <LogicalName>rx.png</LogicalName>
     </EmbeddedResource>
+    <None Include="app.config" />
+    <None Include="data\dsBPMonitor.xsc">
+      <DependentUpon>dsBPMonitor.xsd</DependentUpon>
+    </None>
+    <None Include="data\dsBPMonitor.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>dsBPMonitor.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="data\dsBPMonitor.xss">
+      <DependentUpon>dsBPMonitor.xsd</DependentUpon>
+    </None>
     <None Include="Properties\app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
     <None Include="Reports\MainEntry\Description.txt" />
     <Compile Include="Doctors\DoctorRendererCombo.cs" />
     <Compile Include="Reports\MainEntry\EntryTreeView.cs" />
@@ -177,13 +208,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Folder Include="Reports\" />
-    <Folder Include="SetUp\" />
-    <Folder Include="Doctors\" />
-    <Folder Include="Users\" />
-    <Folder Include="Medications\" />
-    <Folder Include="Properties\" />
-    <Folder Include="Entry\" />
+    <ProjectReference Include="..\7zip\SevenZipSDK.csproj">
+      <Project>{F9C33862-71F4-4076-A756-2ED70B247955}</Project>
+      <Name>SevenZipSDK</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="data\CreateDB.sql">
